--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Asap+Condensed:wght@200;300;400;500;600;700;800&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 html {
   height: 100%;
 }
@@ -25,7 +25,8 @@ code {
 
 
 .font-primary {
-  font-family: 'Asap Condensed', sans-serif;
+  /* font-family: 'Asap Condensed', sans-serif; */
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .font-secondary {
