--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 html {
   height: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -31,4 +32,20 @@ code {
 
 .font-secondary {
   font-family: Arial, Helvetica, sans-serif
+}
+
+.skill-list-bar-r {
+  position: absolute;
+  height: 12rem;
+  width: 4000px;
+  top: 0;
+  left: 1530px;
+}
+
+.skill-list-bar-l {
+  position: absolute;
+  height: 12rem;
+  width: 4000px;
+  top: 0;
+  right: 820px;
 }
